add changelog - publish 407

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "nameresult",
         "Narwallet",
         "narwallets",
+        "nslp",
         "ntoy",
         "oldlink",
         "restake",
@@ -74,6 +75,7 @@
         "unstaking",
         "usdvalue",
         "xtoken",
+        "yocto",
         "Yoctos",
         "yton",
         "ytond"
