addHistory, preserve tx hash

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "backblur",
         "balanceresult",
         "berryclub",
+        "betanet",
         "bgpage",
         "borsh",
         "CHDR",
