2 sources for price data, small fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "hamb",
         "kickout",
         "lockupy",
+        "metapool",
         "midblock",
         "midcolor",
         "muln",
@@ -70,11 +71,13 @@
         "topbarleft",
         "truefalse",
         "tweetnacl",
+        "txns",
         "unselectable",
         "unstake",
         "UNSTAKED",
         "unstaking",
         "usdvalue",
+        "wnear",
         "xtoken",
         "yocto",
         "Yoctos",
