--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "addresslistname",
         "addresslistscrollarea",
         "Adver",
+        "Allbridge",
         "appface",
         "assetdetcontract",
         "assetdeticon",
